--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/roboto-condensed": "^5.0.8",
     "@material-ui/core": "^4.12.4",
     "chart.js": "^4.4.0",
     "react": "^17.0.0",
